--- a/testproject/settings.gradle
+++ b/testproject/settings.gradle
@@ -1,6 +1,7 @@
 pluginManagement {
     repositories {
-        jcenter()
+        mavenCentral()
+        gradlePluginPortal()
 
         maven {url = "https://dl.bintray.com/user11681/maven"}
         maven {url = "https://maven.fabricmc.net"}
