--- a/testbuild/build.gradle
+++ b/testbuild/build.gradle
@@ -13,6 +13,7 @@ wheel {
 dependencies {
     mod("arrp")
     modInclude("api-screen-handler")
+    modInclude("api-screen")
     bloated("auto-config")
     intransitive("mod-menu")
     mod("better-slabs")
