--- a/testbuild/build.gradle
+++ b/testbuild/build.gradle
@@ -8,7 +8,16 @@ version("1.2.3")
 wheel {
     nospam = false
     publish = false
+
+    javaVersion = 13
+
+    javaVersion {
+        source = 9
+    }
 }
+
+println(sourceCompatibility)
+println(targetCompatibility)
 
 dependencies {
     mod("arrp")
@@ -17,4 +26,6 @@ dependencies {
     bloated("auto-config")
     intransitive("mod-menu")
     mod("better-slabs")
+
+    annotationProcessor("jabel")
 }
