--- a/testbuild/build.gradle
+++ b/testbuild/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id("wheel").version("-SNAPSHOT")
+    id("wheel").version("0-SNAPSHOT")
     id("java-library")
 }
 
@@ -8,13 +8,6 @@ version("1.2.3")
 
 wheel {
     nospam = false
-    publish = false
-
-    javaVersion = 13
-
-    javaVersion {
-        source = 9
-    }
 }
 
 repositories {
