--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ gradlePlugin {
 repositories {
     mavenCentral()
 
-    maven {url = "https://auoeke.jfrog.io/artifactory/maven"}
-    maven {url = "https://maven.fabricmc.net"}
+    maven {url("https://auoeke.jfrog.io/artifactory/maven")}
+    maven {url("https://maven.fabricmc.net")}
 }
 
 dependencies {
