--- a/testbuild/build.gradle
+++ b/testbuild/build.gradle
@@ -15,10 +15,10 @@ repositories {
 }
 
 dependencies {
-    mod("arrp")
-    modInclude("api-screen-handler")
-    modInclude("api-screen")
-    bloated("auto-config")
-    intransitive("mod-menu")
-    mod("better-slabs")
+    mod "arrp"
+    modInclude "api-screen-handler"
+    modInclude "api-screen"
+    bloated "auto-config"
+    intransitive "mod-menu"
+    mod "better-slabs"
 }
