fix remapJar task not executing properly
by disabling shareCaches

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -18,14 +18,14 @@ gradlePlugin {
 repositories {
     mavenCentral()
 
-    maven {url("https://auoeke.jfrog.io/artifactory/maven")}
-    maven {url("https://maven.fabricmc.net")}
+    maven {url = "https://auoeke.jfrog.io/artifactory/maven"}
+    maven {url = "https://maven.fabricmc.net"}
 }
 
 dependencies {
     api("net.fabricmc:fabric-loom:0.7-SNAPSHOT")
     api("net.gudenau.lib:unsafe:latest.release")
-    api("user11681:reflect:1.7.0")
+    api("user11681:reflect:1.9.1")
     api("user11681:uncheck:latest.release")
 
     compileOnly("org.jetbrains:annotations:latest.release")
@@ -46,11 +46,11 @@ publishing {
         mavenLocal()
 
         maven {
-            url("https://auoeke.jfrog.io/artifactory/maven")
+            url = System.properties["maven.repository"]
 
             credentials {
-                username(System.env.ARTIFACTORY_USERNAME)
-                password(System.env.ARTIFACTORY_PASSWORD)
+                username = System.properties["maven.username"]
+                password = System.properties["maven.password"]
             }
         }
     }
