--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,21 @@
 plugins {
     id("wheel")
-    id("java-library")
 }
 
-group("user11681")
-version("1.2.3")
+allprojects {
+    group = "user11681"
+    version = "1.2.3"
+}
+
+tasks.publish.dependsOn(gradle.includedBuild("plugin").gradle.rootProject.tasks.publish)
+
+if (!plugins.hasPlugin("wheel")) {
+    return
+}
 
 wheel {
     nospam = false
+    publish = false
 }
 
 repositories {
