--- a/settings.gradle
+++ b/settings.gradle
@@ -3,11 +3,13 @@ pluginManagement {
         mavenLocal()
         mavenCentral()
 
-        maven {url("https://maven.fabricmc.net")}
-        maven {url("https://auoeke.jfrog.io/artifactory/maven")}
+        maven {url = "https://maven.fabricmc.net"}
+        maven {url = "https://auoeke.jfrog.io/artifactory/maven"}
     }
 }
 
 rootProject.name = "testbuild"
 
 includeBuild("plugin")
+
+include("sub")
