--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,35 +1,16 @@
-on:
-  push:
-    tags:
-      - "v*"
-
+name: publish
+on: [push]
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - name: set up JDK
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
-
-      - name: build
-        uses: eskatos/gradle-command-action@v1.3.2
-        with:
-          gradle-version: wrapper
-          arguments: build --stacktrace
+          java-version: "16"
+          distribution: "adopt"
 
       - name: publish
-        uses: eskatos/gradle-command-action@v1.3.2
-        with:
-          gradle-version: wrapper
-          arguments: publish --stacktrace
-
-      - name: upload
-        uses: eskatos/gradle-command-action@v1.3.2
-        with:
-          gradle-version: wrapper
-          arguments: :wheel:bintrayUpload --stacktrace
-        env:
-          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
-          BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
+        run: ./gradlew publish -D maven.username=${{ secrets.GITHUB_USERNAME }} -D maven.password=${{ secrets.GITHUB_PASSWORD }}
