--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: check out repository
+        uses: actions/checkout@v2
       - name: set up JDK
         uses: actions/setup-java@v2
         with:
