--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -46,7 +46,7 @@ publishing {
         mavenLocal()
 
         maven {
-            url = System.properties["maven.repository"]
+            url = "https://auoeke.jfrog.io/artifactory/maven"
 
             credentials {
                 username = System.properties["maven.username"]
