--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -41,6 +41,9 @@ jar {
     from(file("LICENSE"))
 }
 
+println(System.properties["maven.username"])
+println(System.properties["maven.password"])
+
 publishing {
     repositories {
         mavenLocal()
