--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ allprojects {
 }
 
 subprojects {
-    tasks.publish.enabled = false
+    afterEvaluate {
+        tasks.publish.enabled = false
+    }
 }
 
 tasks.publish.dependsOn(gradle.includedBuild("plugin").gradle.rootProject.tasks.publish)
