reset Minecraft version cache on project sync

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ allprojects {
     wheel {
         nospam = false
         publish = false
+        javaVersion = 16
+        channel = "snapshot"
     }
 }
 
