--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ allprojects {
     wheel {
         nospam = false
         publish = false
-        javaVersion = 16
+        java = 16
         channel = "snapshot"
     }
 }
