--- a/plugin/wheel-forge/build.gradle
+++ b/plugin/wheel-forge/build.gradle
@@ -6,7 +6,7 @@ repositories {
 }
 
 dependencies {
-    api("net.minecraftforge.gradle:ForgeGradle:4+")
-    api("com.github.jengelman.gradle.plugins:shadow:6+")
+    api("net.minecraftforge.gradle:ForgeGradle:latest.integration")
+    api("com.github.jengelman.gradle.plugins:shadow:latest.integration")
     api("org.spongepowered:mixingradle:latest.integration")
 }
