--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@ pluginManagement {
     }
 }
 
-rootProject.name = "testbuild"
+rootProject.name = "root"
 
-includeBuild("plugin")
+includeBuild("wheel")
 includeBuild("test")
