--- a/wheel/build.gradle
+++ b/wheel/build.gradle
@@ -66,3 +66,11 @@ subprojects {
         }
     }
 }
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from(components.java)
+        }
+    }
+}
