fix test project repositories and run configuration race condition
The race condition caused incomplete run configurations to be generated.

--- a/test/fabric/build.gradle
+++ b/test/fabric/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    repositories {
+        maven {url = "https://maven.fabricmc.net"}
+    }
+}
+
 plugins {
     id("wheel-fabric").version("latest.integration")
 }
