SNAPSHOT version does not work; change to 0

--- a/wheel/build.gradle
+++ b/wheel/build.gradle
@@ -3,7 +3,7 @@ allprojects {
     plugins.apply("java-library")
 
     group = "user11681"
-    version = "SNAPSHOT"
+    version = "0"
 
     sourceCompatibility = 16
     targetCompatibility = 16
