--- a/wheel/wheel-fabric/build.gradle
+++ b/wheel/wheel-fabric/build.gradle
@@ -3,5 +3,7 @@ repositories {
 }
 
 dependencies {
+    api(project(":wheel-loom-common"))
+
     api("net.fabricmc:fabric-loom:latest.integration")
 }
