--- a/wheel/settings.gradle
+++ b/wheel/settings.gradle
@@ -1,2 +1,22 @@
-include(":wheel-fabric")
-include(":wheel-forge")
+void plugin(String path) {
+    include(path)
+
+    gradle.allprojects {
+        if (it.path == path) {
+            ext.plugin = true
+        }
+
+        if (it != rootProject) {
+            ext.type = name.replace("wheel-", "")
+        }
+    }
+}
+
+gradle.allprojects {ext.plugin = false}
+
+include(":wheel-forge-common")
+include(":wheel-loom-common")
+
+plugin(":wheel-fabric")
+plugin(":wheel-forge")
+plugin(":wheel-forge-loom")
