fix extension configuration by using Closure

--- a/test/fabric/build.gradle
+++ b/test/fabric/build.gradle
@@ -26,6 +26,10 @@ allprojects {
         nospam = false
         publish = false
         channel = "latest"
+
+        java {
+            target = 8
+        }
     }
 }
 
