do not use Minecraft 1.17.1 with Forge

--- a/test/forge-loom/build.gradle
+++ b/test/forge-loom/build.gradle
@@ -10,6 +10,10 @@ plugins {
     id("wheel-forge-loom")
 }
 
+wheel {
+    minecraft = "1.16.5"
+}
+
 runClient {
     executable = "/usr/lib/jvm/java-8-openjdk/jre/bin/java"
     jvmArgs += ["-XX:+IgnoreUnrecognizedVMOptions"]
