--- a/test/fabric/build.gradle
+++ b/test/fabric/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     mod("cf:modmenu-308702:3348711")
     mod("jitpack:Tuinity/Starlight:1.0.0-RC2")
     // mod("better-slabs")
+
+    testMod("api")
 }
